# Multi-Threaded-File-System-With-Cache-Management

./: .gitignore  CMakeLists.txt  COMPARISON_EXPLAINED.md  ENHANCED_CACHE_SUMMARY.md  README.md  README_OLD.md  TEAM_CONTRIBUTIONS.md  documentation.html  enhancement_plan.md  project_documentation.md  test_enhanced_cache.ps1
benchmark/: CMakeLists.txt
benchmark/src/: backup_benchmark.cpp  benchmark_main.cpp  clean_benchmark.cpp  comprehensive_benchmark.cpp  explanation_benchmark.cpp  real_comparison_benchmark.cpp  simple_benchmark.cpp
cli/: CMakeLists.txt  README.md
cli/src/: main.cpp
project_benchmark/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  MultiThreadedFS.sln  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
project_benchmark/cache/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters
project_benchmark/cli/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  mtfs_cli.vcxproj  mtfs_cli.vcxproj.filters
project_benchmark/cli/mtfs_cli.dir/Debug/: mtfs_cli.exe.recipe
project_benchmark/cli/mtfs_cli.dir/Debug/mtfs_cli.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mtfs_cli.lastbuildstate
project_benchmark/common/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  common.vcxproj  common.vcxproj.filters
project_benchmark/common/common.dir/Debug/common.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  common.lastbuildstate
project_benchmark/fs/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  fs.vcxproj  fs.vcxproj.filters
project_benchmark/fs/fs.dir/Debug/fs.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  fs.lastbuildstate
project_benchmark/journal/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  journal.vcxproj  journal.vcxproj.filters
project_benchmark/journal/journal.dir/Debug/: journal.lib.recipe
project_benchmark/journal/journal.dir/Debug/journal.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  journal.lastbuildstate
project_benchmark/src/: backup_benchmark.cpp  cache_benchmark.cpp  compression_benchmark.cpp  fs_benchmark.cpp
project_benchmark/storage/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  storage.vcxproj  storage.vcxproj.filters
project_benchmark/storage/storage.dir/Debug/storage.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  storage.lastbuildstate
project_benchmark/test/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  integration_test.vcxproj  integration_test.vcxproj.filters
project_benchmark/test/integration_test.dir/Debug/: integration_test.exe.recipe
project_benchmark/test/integration_test.dir/Debug/integration_test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  (+7 more)
project_benchmark/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
threading/: CMakeLists.txt
threading/include/threading/: thread_pool.hpp  thread_pool.tpp
threading/src/: thread_pool.cpp
(+37 files in other folders)
